--- a/bericot-backend/package.json
+++ b/bericot-backend/package.json
@@ -34,5 +34,8 @@
     "@types/node": "^20.14.11",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
+  },
+  "engines": {
+    "node": "20.17"
   }
 }
