--- a/bericot-frontend/package.json
+++ b/bericot-frontend/package.json
@@ -11,8 +11,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
     "exceljs": "^4.4.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-scripts": "^5.0.1",
     "svgo": "^3.3.2",
@@ -33,6 +35,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "engines": {
+    "node": "20.17"
   },
   "eslintConfig": {
     "extends": [
