--- a/bericot-backend/package.json
+++ b/bericot-backend/package.json
@@ -21,6 +21,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.9",
     "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "exceljs": "^4.4.0",
     "express": "^4.19.2",
     "inversify": "^6.0.3",
@@ -30,6 +31,7 @@
     "reflect-metadata": "^0.2.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.18",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.11",
     "ts-node": "^10.9.2",
