--- a/bericot-frontend/package.json
+++ b/bericot-frontend/package.json
@@ -8,27 +8,32 @@
     "@mui/material": "^7.1.0",
     "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.5.2",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "exceljs": "^4.4.0",
-    "react": "^18.3.1",
+    "nth-check": "^2.1.1",
+    "postcss": "^8.4.31",
+    "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.1.0",
     "react-scripts": "^5.0.1",
     "svgo": "^3.3.2",
-    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@types/axios": "^0.9.36",
     "@types/jest": "^29.5.12",
-    "@types/node": "^16.18.126",
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.0",
+    "@types/node": "^22.15.23",
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.5",
+    "@vitejs/plugin-react": "^4.5.0",
     "eslint": "^8.57.0",
-    "eslint-config-react-app": "^7.0.1"
+    "eslint-config-react-app": "^7.0.1",
+    "typescript": "^4.9.5",
+    "vite": "^6.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
