--- a/bericot-backend/package.json
+++ b/bericot-backend/package.json
@@ -22,6 +22,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "exceljs": "^4.4.0",
     "express": "^4.19.2",
     "inversify": "^6.0.3",
